syntax = "proto3";

package access_token;

import "client.proto";

message AccessToken {
  string id = 1;
  string authorization_code_id = 2;
  string client_id = 3;
  string token = 4;
  string expires_in = 5;
  string created_at = 6;
  string updated_at = 7;
  client.Client client = 8;
}

message AccessTokenList {
  repeated AccessToken access_token = 1;
}
